tests/NormalTests/paczka1/fuzzy1/47477103.err
Error in line 4: XQM4xV S91 36,2
Error in line 1: qqz9ysBipM S91 85,2
Error in line 5: XQM4xV S59 79,7
Error in line 8: qqz9ysBipM S690 39,4
Error in line 25: qqz9ysBipM S91 1,0
Error in line 6: 0Bvk50 S59 10,9
